add VSCode code / source action keybindings

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,5 +23,6 @@ source = ~/.config/hypr/autostart.conf
 # windowrule = workspace 5, match:class qemu
 
 windowrule = tag +floating-window, match:class org.omarchy.sinuous
+# Chrome Bitwarden extension popup window
 windowrule = no_screen_share on, match:class chrome-nngceckbapebfimnlniiiahkandclblb-Default
 windowrule = tag +floating-window, match:class chrome-nngceckbapebfimnlniiiahkandclblb-Default
