Revert "add VSCode code / source action keybindings"
This reverts commit 8788caf7bcf6c555174b4907eece54d1cec465e9.

--- a/hypr/monitors.conf
+++ b/hypr/monitors.conf
@@ -35,14 +35,14 @@ monitor = desc:Dell Inc. DELL P2725QE 45BXPB4, 3840x2160@100, auto, auto
 #monitor = DP-7, 3840x2160@60, auto, auto
 #monitor = DP-8, 3840x2160@60, auto, auto
 
-workspace = 1, monitor:desc:Dell Inc. DELL P2725QE 4GVXPB4, persistent:true
-workspace = 2, monitor:desc:Dell Inc. DELL P2725QE 4GVXPB4, persistent:true
-workspace = 4, monitor:desc:Dell Inc. DELL P2725QE 4GVXPB4, persistent:true
+workspace = 1, monitor:DP-7, persistent:true
+workspace = 2, monitor:DP-7, persistent:true
+workspace = 4, monitor:DP-7, persistent:true
 workspace = 6, monitor:DP-7, persistent:true
 workspace = 8, monitor:DP-7, persistent:true
 workspace = 10, monitor:DP-7, persistent:true
 
-workspace = 3, monitor:desc:Dell Inc. DELL P2725QE 45BXPB4, persistent:true
+workspace = 3, monitor:DP-8, persistent:true
 workspace = 5, monitor:DP-8, persistent:true
 workspace = 7, monitor:DP-8, persistent:true
 workspace = 9, monitor:DP-8, persistent:true
