--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -5,22 +5,10 @@ general {
 }
 
 background {
-    monitor = desc:xxx
+    monitor =
     color = $color
     path = ~/.config/omarchy/current/background
     blur_passes = 3
-}
-background {
-    monitor = desc:Dell Inc. DELL P2725QE 4GVXPB4
-    color = $color
-    path = /home/stefan/Downloads/desert_dunes_sandy_vast_golden_endless_cloudy-wallpaper-7680x2160-left.jpg
-    blur_passes = 1
-}
-background {
-    monitor = desc:Dell Inc. DELL P2725QE 45BXPB4
-    color = $color
-    path = /home/stefan/Downloads/desert_dunes_sandy_vast_golden_endless_cloudy-wallpaper-7680x2160-right.jpg
-    blur_passes = 1
 }
 
 animations {
